# numpyGPT

./: .gitignore  .pre-commit-config.yaml  README.md  datagen.py  demo_gpt.py  plot.py  plot_metrics.py  pyproject.toml  sample.py  test.py  train.py
assets/outputs/: bpe.out  char.out  word.out
docs/: BACKPROP.md  EXPERIMENTS.md  OPTIMIZERS.md  TOKENIZERS.md
numpyGPT/models/: GPT.py
numpyGPT/nn/: functional.py
numpyGPT/nn/modules/: __init__.py  activation.py  attention.py  embedding.py  feedforward.py  layerNorm.py  linear.py  module.py  positional.py  transformer.py
numpyGPT/optim/: __init__.py  adam.py  optimizer.py
numpyGPT/optim/lr_scheduler/: __init__.py  lr_scheduler.py  step_lr.py  warmup_cosine_lr.py
numpyGPT/tokenizer/: __init__.py  bpe.py  char_level.py  protocol.py  word_level.py
numpyGPT/utils/: prepare_data.py  training.py  vis.py
numpyGPT/utils/data/: __init__.py  dataloader.py
tests/models/: test_gpt.py
tests/nn/: test_functional.py
tests/nn/modules/: test_activation.py  test_attention.py  test_embedding.py  test_feedforward.py  test_layerNorm.py  test_linear.py  test_positional.py  test_transformer.py
tests/optim/: test_optimizer.py
tests/optim/lr_scheduler/: test_warmup_cosine_lr.py
tests/pytorch/: README.md  test_blocks.py  test_components.py
tests/test_nn/: test_functional.py  test_gpt.py  test_modules.py
tests/test_optim/: test_lr_scheduler.py  test_optimizer.py
tests/test_tokenizer/: test_tokenizer.py
tests/test_utils/: test_data.py
tests/tokenizer/: test_tokenizer.py
tests/utils/data/: test_data.py
